--- a/CTThinker.html
+++ b/CTThinker.html
@@ -13,5 +13,6 @@
 <div class="div1" id="info"></div>
 <div class="div1" id="levelselection"></div>
 <div class="div1" id="level"></div>
+<div class="div1" id="finished"></div>
 </body>
 </html>
